configs/k8s/overlays/staging/open-wearables-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-wearables-ingress
  namespace: fitness-platform-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging-openwearables.fittpulse.ru
      secretName: staging-openwearables-fittpulse-ru-tls
  rules:
    - host: staging-openwearables.fittpulse.ru
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: open-wearables
                port:
                  number: 8000
          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: open-wearables-frontend
                port:
                  number: 3000
